# budgetam-app

./: .gitignore  README.md  angular.json  docker-compose.yaml  index.html  package-lock.json  package.json
backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sendinblue.py  start-server.sh
backend/api/: __init__.py
backend/api/v0/: __init__.py  config.py  entrypoint.py
backend/api/v0/auth/: token_required.py
backend/api/v0/index/: __init__.py  (+1 more)
backend/flask_api/: requirements.txt
backend/flask_api/models/: __init__.py  base_model.py  transactions.py  users.py
backend/flask_web_app/: .coverage  config.py  env  requirements.txt  start-server.sh
backend/flask_web_app/models/: __init__.py  base_model.py  categories.py  transactions.py  users.py
backend/flask_web_app/tests/: __init__.py  conftest.py
backend/models/: __init__.py  base_model.py  categories.py  transaction_category.py  transactions.py  users.py
backend/models/engine/: __init__.py  db_storage.py  file_storage.py
backend/sql_compose/: budgetam.sql  dev_db_setup.sql  hello.sql
backend/tests/: __init__.py  conftest.py
backend/tests/functional/: __init__.py  test_categories.py  test_index.py  test_transactions.py  test_users.py
backend/tests/unit/: test_categories.py  test_users.py
backend/v0/: config.py  entrypoint.py
backend/v0/index/: index.py
backend/v0/static/: polyfills.d8340dca6490a398.js  runtime.1a83bdebead94942.js  scripts.ce3ab4d60696e099.js  styles.caf04ec0d56fd6e6.css
backend/v0/templates/: index.html
backend/v0/views/: __init__.py
(+207 files in other folders)
