[tool.poetry]
name = "budgetam-api"
version = "0.1.0"
description = ""
authors = ["Ifiok Ekott <ekottifiok@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "budgetam_api"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
sqlalchemy = "2.0.0"
flask-cors = "3.0.10"
flasgger = "0.9.5"
mysqlclient = "2.1.1"
email-validator = "^1.3.1"
pyjwt = "2.6.0"
pytest = "^7.2.1"
coverage = "^7.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
